--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 
     <div class="image-container">
-        <img src="https://verify2.jgtl.org/9isqoa.jpg" alt="Certificate">
+        <img src="https://verify.jgtl.org/9isqoa.jpg" alt="Certificate">
         <h2>Certificate of Achievement</h2> <!-- Optional text -->
     </div>
 
